--- a/p.css
+++ b/p.css
@@ -37,7 +37,7 @@ body {
   color: #fff;
 }
 /* COMMENT */
-
+/* COMMENT */
 .password-generator h1 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
@@ -45,7 +45,7 @@ body {
   color: #22223b;
   letter-spacing: 0.02em;
 }
-
+/* COMMENT */
 .password-generator .description {
   text-align: center;
   margin-bottom: 1.8rem;
