--- a/p.css
+++ b/p.css
@@ -1,7 +1,7 @@
 /* COMMENT */
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0;/* COMMENT */
+  padding: 0;/* COMMENT */
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
